--- a/Mini Project - Navigation Commands/pom.xml
+++ b/Mini Project - Navigation Commands/pom.xml
@@ -2,37 +2,29 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>NavigationCommands</groupId>
-	<artifactId>MiniProject-NavigationCommands</artifactId>
+	<groupId>nishchay-gupta</groupId>
+	<artifactId>Navigation-Commands</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
 
 		<!--
 		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
-
-		<!--
-		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>4.19.1</version>
+			<version>4.20.0</version>
 		</dependency>
 
+		<!--
+		https://mvnrepository.com/artifact/org.apache.directory.studio/org.apache.commons.io -->
+		<!--Adding this to resolve this error - FileUtils type not resolved-->
 
 		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.11.0</version>
+			<groupId>org.apache.directory.studio</groupId>
+			<artifactId>org.apache.commons.io</artifactId>
+			<version>2.4</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-to-slf4j</artifactId>
-			<version>2.8.2</version>
-		</dependency>
-
 
 	</dependencies>
-
 </project>
